# nomi-protocol

./: .gitignore  README.md  package-lock.json  package.json  pyproject.toml  remote_protocol.json  tsconfig.json
.github/workflows/: ci.yml
examples/events/: ready.json  resource_action_result.json  send_message.json  session_bound.json  sidebar_snapshot.json  task_delivered.json
nomi_protocol/: __init__.py  events.py  http.py  remote.py  remote_protocol.json  shared.py
src/: events.ts  http.ts  remote.ts  shared.ts  spec.ts
tests/: test_remote_protocol.py
